test fix on mobile

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -21,7 +21,7 @@
 	@media screen and (max-width: 550px) {
 		max-width: 8rem;
 		height: 1.2rem;
-		padding: 0.6rem 0.6rem;
+		padding: 0.4rem 0.4rem;
 		margin: 0.2rem 0rem;
 		font-size: 1rem;
 	}
